hotfix: fix some test failed
